# AutoBot

./: README.md
group7_ws/src/auefinals/: README.md
group7_ws/src/auefinals/aue_finals/: installing cuda.md  package.xml
group7_ws/src/auefinals/aue_finals/config/: tags.yaml
group7_ws/src/auefinals/aue_finals/launch/: april_tag_turtlebot3_autonomy_final.launch  continuous_detection.launch  follow_line_turtlebot3_autonomy_final.launch  integration_simulation_turtlebot3_autonomy_final.launch  lidar_turtlebot3_autonomy_final.launch  real_follow_line_turtlebot3_autonomy_final.launch  real_integration_simulation_turtlebot3_autonomy_final.launch  real_integration_turtlebot3_autonomy_final.launch  simulation_integration_turtlebot3_autonomy_final.launch  stop_sign_turtlebot3_autonomy_final.launch  turtlebot3_autonomy_final.launch  yolo_v2_tiny.launch
group7_ws/src/auefinals/aue_finals/models/apriltag/: model.config  model.sdf
group7_ws/src/auefinals/aue_finals/models/apriltag/materials/scripts/: apriltag.material
group7_ws/src/auefinals/aue_finals/scripts/: 2follow_line.py  AutonomousBot.py  AutonomousBot_keyboard.py  AutonomousBot_real.py  AutonomousBot_real_keyboard.py  apriltag_utils.py  follow_line_stop_sign.py  line_hsv_fetcher.py  stop_sign.py  wall_follower_obstacle_avoidance.py  wall_follower_obstacle_avoidance_real.py
group7_ws/src/auefinals/aue_finals/scripts/old/: apriltag_utils_without_class.py
group7_ws/src/auefinals/aue_finals/utils/: telegram_msg.py
group7_ws/src/auefinals/aue_finals/worlds/: turtlebot3_final_apriltag.world
