<?xml version="1.0"?>
<package format="2">
  <name>aue_finals</name>
  <version>1.0.0</version>
  <description>AutoBot autonomous turtlebot3 package</description>
  <maintainer email="pswaroo@clemson.edu">Pranava Swaroopa</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
